<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gerenciador De Fiado</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo Marca</string>
    <string name="cadastreSe">Cadastre-se</string>
    <string name="buscar">Buscar</string>
    <string name="termo">Termo de busca</string>
    <string name="excluir">Excluir</string>
    <string name="produto">Produto</string>
    <string name="tipo">Tipo</string>
    <string name="codigo">Código</string>
    <string name="preco">Preço</string>
    <string name="novoCadastro">Novo Cadastro</string>
    <string name="cliente">Cliente</string>
    <string name="vendedor">Vendedor</string>
    <string name="login">Login</string>
    <string name="esqueceuSenha">Esqueceu senha?</string>
    <string name="lembreteSenha">Lembrete de senha</string>
    <string name="nome">Nome</string>
    <string name="nomeUsuario">Nome de usuário</string>
    <string name="senha">Senha</string>
    <string name="repetirSenha">Repita Senha</string>
    <string name="cpf">Cpf</string>
    <string name="cnpj">CNPJ</string>
    <string name="rg">RG</string>
    <string name="dataNascimento">Data de nascimento</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
	<string name="cidade">Cidade</string>
	<string name="estado">Estado</string>
	<string name="bairro">Bairro</string>
    <string name="pais">País</string>
    <string name="cep">CEP</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="ddd">DDD</string>
    <string name="telefone">Telefone</string>
    <string name="referencia">Referência</string>
    <string name="email">E-mail</string>
    <string name="proximo">Próximo</string>
    <string name="finalizar">Finalizar</string>
    <string name="ufpb">UFPB</string>
    <string name="litoral">Litoral Norte</string>
    <string name="curso1">Licenciatura em</string>
    <string name="curso2">Ciência da Computação</string>
    <string name="menuPrincipal">Menu Principal</string>
    
    
    
</resources>
